--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
 		"paths": {
 			"@/*": ["src/*"],
 			"@components/*": ["src/components/*"],
+			"@pages/*": ["src/pages/*"],
 			"@assets/*": ["src/assets/*"]
 		}
 	},
