--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.0",
     "@types/react-dom": "^18.2.7",
