--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.0.6",
     "react": "^18.2.0",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
