--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-quill": "^2.0.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
