--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.20.0",
