--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
 			"@assets/*": ["src/assets/*"]
 		}
 	},
-	"include": ["src"],
+	"include": ["src", "src/.env.d.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
