--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.4",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.0",
