--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "talktudy",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx}",
-    "format": "prettier --write --cache .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.5.1",
-    "date-fns": "^2.30.0",
-    "dompurify": "^3.0.6",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.20.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-quill": "^2.0.0",
-    "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.7",
-    "styled-components": "^6.0.8"
-  },
-  "devDependencies": {
-    "@types/dompurify": "^3.0.4",
-    "@types/node": "^20.8.6",
-    "@types/react": "^18.2.15",
-    "@types/react-datepicker": "^4.19.0",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.50.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-tsconfig-paths": "^4.2.1"
-  }
+	"name": "talktudy",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx}",
+		"format": "prettier --write --cache .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"axios": "^1.5.1",
+		"date-fns": "^2.30.0",
+		"dompurify": "^3.0.6",
+		"react": "^18.2.0",
+		"react-datepicker": "^4.20.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.11.0",
+		"react-quill": "^2.0.0",
+		"react-router": "^6.16.0",
+		"react-router-dom": "^6.16.0",
+		"react-select": "^5.7.7",
+		"sockjs-client": "^1.6.1",
+		"stompjs": "^2.3.3",
+		"styled-components": "^6.0.8"
+	},
+	"devDependencies": {
+		"@types/dompurify": "^3.0.4",
+		"@types/node": "^20.8.6",
+		"@types/react": "^18.2.15",
+		"@types/react-datepicker": "^4.19.0",
+		"@types/react-dom": "^18.2.7",
+		"@types/sockjs-client": "^1.5.3",
+		"@types/stompjs": "^2.3.7",
+		"@typescript-eslint/eslint-plugin": "^6.7.3",
+		"@typescript-eslint/parser": "^6.7.3",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"eslint": "^8.50.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5",
+		"vite-tsconfig-paths": "^4.2.1"
+	}
 }
