--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@stomp/stompjs": "^7.0.0",
 		"axios": "^1.5.1",
 		"date-fns": "^2.30.0",
 		"dompurify": "^3.0.6",
@@ -26,7 +27,8 @@
 		"react-select": "^5.7.7",
 		"sockjs-client": "^1.6.1",
 		"stompjs": "^2.3.3",
-		"styled-components": "^6.0.8"
+		"styled-components": "^6.0.8",
+		"webstomp-client": "^1.2.6"
 	},
 	"devDependencies": {
 		"@types/dompurify": "^3.0.4",
