--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"sockjs-client": "^1.6.1",
 		"stompjs": "^2.3.3",
 		"styled-components": "^6.0.8",
-		"webstomp-client": "^1.2.6"
+		"webstomp-client": "^1.2.6",
+		"ws": "^8.14.2",
+		"wss": "^3.3.4"
 	},
 	"devDependencies": {
 		"@types/dompurify": "^3.0.4",
