--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"date-fns": "^2.30.0",
 		"dompurify": "^3.0.6",
 		"react": "^18.2.0",
+		"react-cookie": "^6.1.1",
 		"react-datepicker": "^4.20.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
