배포 에러 수정

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"ws": "^8.14.2",
 		"wss": "^3.3.4"
 	},
+	"homepage": ".",
 	"devDependencies": {
 		"@types/dompurify": "^3.0.4",
 		"@types/node": "^20.8.6",
@@ -53,6 +54,5 @@
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5",
 		"vite-tsconfig-paths": "^4.2.1"
-	},
-	"homepage": "."
+	}
 }
