--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"sockjs-client": "^1.6.1",
 		"stompjs": "^2.3.3",
 		"styled-components": "^6.0.8",
+		"sweetalert2": "^11.9.0",
 		"webstomp-client": "^1.2.6",
 		"ws": "^8.14.2",
 		"wss": "^3.3.4"
